--- a/style.css
+++ b/style.css
@@ -1,2 +1,120 @@
+body{
+    background-color: #003053c4;
+}
 
-  
+*{
+    margin:0;
+    padding:0;
+    box-sizing: border-box;
+    text-decoration:none;
+    border: none;
+    outline:none;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+html{
+    font-size:  62.5%;
+}
+
+body{
+    width:100%;
+    height:100vh;
+    overflow-x: hidden;
+    background-color:#51697b;
+    color:antiquewhite;
+
+}
+
+header{
+    margin-top: 20px;
+    position:fixed;
+    top:0;
+    left:0;
+    width:100%;
+    padding:1rem 9%;
+    background-color: transparent;
+    filter: drop-shadow(10px);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
+}
+
+.logo{
+    font-size:3rem;
+    color: antiquewhite;
+    font: weight 800;
+    cursor: pointer;
+    transition:0.5s ease;
+}
+
+.logo:hover{
+    transform:scale(1.1);
+}
+
+nav a {
+    font-size:1.8rem;
+    color:antiquewhite;
+    margin-left: 4rem;
+    font-weight:500;
+    transition:0.3 ease;
+    border-bottom:3px solid transparent;
+}
+
+nav a:hover,
+nav a.active{
+    color:#1c26aa;
+    border-bottom: 3px solid #163b8a;
+}
+
+@media(max-width:995px){
+    nav{
+        position:absolute;
+        top: 100%;
+        right:0;
+        width:40%;
+        border-left: 3px solid #55a6a8;
+        border-bottom: 3px solid #55a6a8;
+        border-bottom-left-radius: 2rem;
+        padding:1rem solid;
+        background-color:rgb(70, 118, 133);
+    }
+
+    nav.active{
+        display:block;
+    }
+
+nav a{
+    display: block;
+    font-size:2rem;
+    margin:3rem 0 ;
+}
+
+nav a:hover,
+nav a.active{
+ padding:1rem;
+ border-radius: 0.5rem;
+ border-bottom:0.5rem solid #55a6a8;
+}
+}
+
+.home-content{
+    position:absolute;
+    top: 40%; 
+    left: 20%; 
+    transform: translate(-50%, -50%); 
+    background-color:#51697bcb;
+    color: #fff; 
+    padding: 10px 20px; 
+    font-size: 20px; 
+    text-align: center;
+}
+
+h1{
+    
+  font-family: "Concert One", serif;
+  font-weight: 400;
+  font-style: normal;
+      font-size: 100px;
+}
+
