--- a/timer.css
+++ b/timer.css
@@ -2,24 +2,29 @@
     display:flex;
     flex-direction:column;
     align-items:center;
-    background-color:#003053c4 ;
+    background-color:#51697b;
+    align-items: center;
  }
 
  #myH1{
     font-size:4rem;
-    font-family:"Arial",sans-serif;
-    color: #f0e68c;
+    font-family: "Concert One", serif;
+    font-weight: 400;
+    font-style: normal;
+    
+   
  }
 
  #container{
     display:flex;
     flex-direction: column;
-    align-items: center;
+    align-items:center;
     padding:30px;
     border:5px solid;
     border-color: antiquewhite;
     border-radius:  50px;
     background-color:grey;
+
  }
 
  #display{
@@ -28,7 +33,8 @@
     font-weight:bold;
     color: rgba(27, 27, 27, 0.699);
     text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.705);
-    margin: bottom 25px;;
+    margin: bottom 25px;
+    align-items:center;
  }
 
  #controls button{
@@ -61,3 +67,101 @@ color: white;
  #resetBtn:hover{
     background-color: rgba(150, 150, 150, 0.63);
  }
+
+ *{
+   margin:0;
+   padding:0;
+   box-sizing: border-box;
+   text-decoration:none;
+   border: none;
+   outline:none;
+   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+html{
+   font-size:  62.5%;
+}
+
+body{
+   width:100%;
+   height:100vh;
+   overflow-x: hidden;
+   background-color:#51697b;
+   color:antiquewhite;
+
+}
+
+header{
+   margin-top: 20px;
+   position:fixed;
+   top:0;
+   left:0;
+   width:100%;
+   padding:1rem 9%;
+   background-color: transparent;
+   filter: drop-shadow(10px);
+   display: flex;
+   justify-content: space-between;
+   align-items: center;
+   z-index: 100;
+}
+
+.logo{
+   font-size:3rem;
+   color: antiquewhite;
+   font: weight 800;
+   cursor: pointer;
+   transition:0.5s ease;
+}
+
+.logo:hover{
+   transform:scale(1.1);
+}
+
+nav a {
+   font-size:1.8rem;
+   color:antiquewhite;
+   margin-left: 4rem;
+   font-weight:500;
+   transition:0.3 ease;
+   border-bottom:3px solid transparent;
+}
+
+nav a:hover,
+nav a.active{
+   color:#1c26aa;
+   border-bottom: 3px solid #163b8a;
+}
+
+@media(max-width:995px){
+   nav{
+       position:absolute;
+       top: 100%;
+       right:0;
+       width:40%;
+       border-left: 3px solid #55a6a8;
+       border-bottom: 3px solid #55a6a8;
+       border-bottom-left-radius: 2rem;
+       padding:1rem solid;
+       background-color:rgb(70, 118, 133);
+   }
+
+   nav.active{
+       display:block;
+   }
+
+nav a{
+   display: block;
+   font-size:2rem;
+   margin:3rem 0 ;
+}
+
+nav a:hover,
+nav a.active{
+padding:1rem;
+border-radius: 0.5rem;
+border-bottom:0.5rem solid #55a6a8;
+}
+}
+
+
