--- a/timer.css
+++ b/timer.css
@@ -1,9 +1,10 @@
  body{
     display:flex;
-    flex-direction:column;
+    flex-direction: center;
     align-items:center;
     background-color:#51697b;
-    align-items: center;
+    justify-content: center;
+    
  }
 
  #myH1{
@@ -11,7 +12,7 @@
     font-family: "Concert One", serif;
     font-weight: 400;
     font-style: normal;
-    
+    align-items: center;
    
  }
 
@@ -38,7 +39,7 @@
  }
 
  #controls button{
-font: size 1.5rem;
+font-size:  1.5rem;
 font-weight:bold;
 padding:10px 20px;
 margin:5px;
@@ -131,37 +132,6 @@ nav a:hover,
 nav a.active{
    color:#1c26aa;
    border-bottom: 3px solid #163b8a;
-}
-
-@media(max-width:995px){
-   nav{
-       position:absolute;
-       top: 100%;
-       right:0;
-       width:40%;
-       border-left: 3px solid #55a6a8;
-       border-bottom: 3px solid #55a6a8;
-       border-bottom-left-radius: 2rem;
-       padding:1rem solid;
-       background-color:rgb(70, 118, 133);
-   }
-
-   nav.active{
-       display:block;
-   }
-
-nav a{
-   display: block;
-   font-size:2rem;
-   margin:3rem 0 ;
-}
-
-nav a:hover,
-nav a.active{
-padding:1rem;
-border-radius: 0.5rem;
-border-bottom:0.5rem solid #55a6a8;
-}
 }
 
 
